--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
       <div class="git">
 <h1>TIC-TAC-TOE</h1>
-<h3>Purpose: Play "Tic-Tac-Toe" game</h3>
+<h3>Purpose: Player's can add their name and play "Tic Tac Toe" game</h3>
 <a href="https://github.com/Priyanka23-Brs/Clock-JS"><button class="btns">Git-Repo</button></a>
       </div>
     </header>
